12-gke-platform-admins/budita-app/kustomize-bases/frontend/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      name: frontend
      annotations:
          sidecar.istio.io/rewriteAppHTTPProbers: "true" # allow http probes from kubelet
    spec:
      securityContext:
        fsGroup: 1000
      serviceAccountName: frontend
      containers:
      - name: frontend
        image: frontend
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 30
        ports:
        - name: http
          containerPort: 8080
        securityContext:
          privileged: false
          runAsUser: 1000
          runAsGroup: 1000
